# apertium-sme-smj

./: .gitattributes  .gitignore  AUTHORS  HACKING  Makefile.am  README  aarseth.sme.txt  apertium-sme-smj.post-smj.dix  apertium-sme-smj.sme-smj.dix  apertium-sme-smj.sme-smj.lex  apertium-sme-smj.sme-smj.lrx  apertium-sme-smj.sme-smj.lsx  apertium-sme-smj.sme-smj.metalrx  apertium-sme-smj.sme-smj.ref.t1x  apertium-sme-smj.sme-smj.rlx  apertium-sme-smj.sme-smj.rtx  apertium-sme-smj.sme-smj.t1x  apertium-sme-smj.sme-smj.t2x  apertium-sme-smj.sme-smj.t3x  apertium-sme-smj.sme-smj.t4x  apertium-sme-smj.sme-smj.t5x  apertium-sme-smj.sme.lexc  apertium-sme-smj.smj-sme.lrx  apertium-sme-smj.smj-sme.lsx  apertium-sme-smj.smj-sme.metalrx  apertium-sme-smj.smj-sme.rtx  apertium-sme-smj.smj-sme.t1x  apertium-sme-smj.smj-sme.t2x  apertium-sme-smj.smj-sme.t4x  apertium-sme-smj.smj.dix  apertium-sme-smj.smj.lexc  apertium-sme-smj.smj.twol  check_mt-otpt.py  check_mt-otpt_wer.py  configure.ac  evaluate_xml.sh  giza_list.txt  gt2apertium.cg3r  hash.sh  metalrx-to-lrx.xslt  (+8 more)
dev/: Olli_kronikk_sme2smj.html  SMJ_TO_GENERATE  SP_missing.txt  SP_missing_frekv.txt  Samit_MT_missing_analysed.txt  TriSaami.txt  TriSaami_sme_analyzed.txt  TriSaami_sme_pos.txt  TriSaami_smj_analyzed.txt  TriSaami_smj_pos.txt  analyse-all-stages.sh  basura.py  bidix-sanity.sh  check_sme_verbs.sh  checknouns.txt  dárbahit.paradigm  giza_list.txt  gohčodit.paradigm  hash-report.freq  langs.cfg  manaid_vuoigatvuodat_sme2smj.html  missinglist.txt  missingsme2.txt  missingsmj2.txt  missingverblist.txt  mod_per_cadena.py  propernouns_from_saami_schoolhist.txt  ruledocu.sh  sametingmissing_adverb  sametingmissing_analys  sametingmissing_frekv  sanityoutput  sikor.sme.A.freq.cmp.missing  sikor.sme.A.freq.missing  sikor.sme.A.freq.nocmp.missing  sikor.sme.Adv.freq.missing  sikor.sme.N.freq.cmp.missing  sikor.sme.N.freq.missing  sikor.sme.N.freq.nocmp.missing  sikor.sme.Pron.freq.missing  (+23 more)
freqsorted_dix/: adj_sme2smj_dix.xml  n_sme2smj_dix.xml  np_sme2smj_dix.xml  v_sme2smj_dix.xml
inc/: 00_readme.txt  A_intersection_multis  A_intersection_singles  A_precomp_ana_00_multis_nob  A_precomp_ana_00_singles  A_syn_ana_00_multis  A_syn_ana_00_singles  A_xfst_ana_00_singles_sme  N_cross_ana_00_multis_nob  N_cross_ana_00_singles_nob  N_decomp_ana_00_multis  N_decomp_ana_00_singles  N_intersection_multis  N_intersection_singles  N_lexc_ana_00_singles_sme  N_loan_ana_00_nob  N_precomp_ana_00_multis  N_precomp_ana_00_singles  N_syn_ana_00_multis  N_syn_ana_00_singles  N_xfst_ana_00_sme  V_cross_ana_00_nob  V_intersection_multis  V_intersection_singles  V_precomp_ana_00_multis_nob  V_precomp_ana_00_singles  V_syn_ana_00  V_xfst_ana_00_singles_sme
modes/: sme-smj.mode
pseudo_tmx_data/: SP-01-2012_sme2smj.tmx  SP-02-2012_sme2smj.tmx  SP-05-2012_sme2smj.tmx  SP-06-2012_sme2smj.tmx  SP-08-2012_sme2smj.tmx  SP-09-2012_sme2smj.tmx  SP-10-2012_sme2smj.tmx  SP-11-2012_sme2smj.tmx  SP-12-2012_sme2smj.tmx  SP-14-2012_sme2smj.tmx  SP-15-2012_sme2smj.tmx  SP-16-2012_sme2smj.tmx  SP-17-2012_sme2smj.tmx  SP-18-2012_sme2smj.tmx  SP-51-2015_sme2smj.tmx  SP-52-2015_sme2smj.tmx  boazodoaluhahkan_sme2smj.tmx  cahceravgga_sme2smj.tmx  manaid_vuoigatvuodat_sme2smj.tmx  unnitruda_sme2smj.tmx
t/: config.sh  latest-pending.results  latest-regression.results  pending-tests  regression-tests  wiki-tests
test/: sme-smj-autoseq-expected.txt  sme-smj-biltrans-expected.txt  sme-smj-disam-a-expected.txt  sme-smj-generator-expected.txt  sme-smj-generator-gold.txt  sme-smj-input.txt  sme-smj-interchunk2-expected.txt  sme-smj-morph-expected.txt  sme-smj-pending-biltrans-expected.txt  sme-smj-pending-chunker-expected.txt  sme-smj-pending-disam-a-expected.txt  sme-smj-pending-generator-expected.txt  sme-smj-pending-generator-gold.txt  sme-smj-pending-input.txt  sme-smj-pending-interchunk1-expected.txt  sme-smj-pending-interchunk2-expected.txt  sme-smj-pending-interchunk3-expected.txt  sme-smj-pending-lex-expected.txt  sme-smj-pending-morph-expected.txt  sme-smj-pending-postchunk-expected.txt  sme-smj-pending-pretransfer-expected.txt  sme-smj-pending-syntax-a-expected.txt  sme-smj-postchunk-expected.txt  sme-smj-regression-autoseq-expected.txt  sme-smj-regression-autoseq2-expected.txt  sme-smj-regression-biltrans-expected.txt  sme-smj-regression-chunker-expected.txt  sme-smj-regression-disam-a-expected.txt  sme-smj-regression-disam-expected.txt  sme-smj-regression-generator-expected.txt  sme-smj-regression-generator-gold.txt  sme-smj-regression-input.txt  sme-smj-regression-interchunk1-expected.txt  sme-smj-regression-interchunk2-expected.txt  sme-smj-regression-interchunk3-expected.txt  sme-smj-regression-lex-expected.txt  sme-smj-regression-morph-expected.txt  sme-smj-regression-postchunk-expected.txt  sme-smj-regression-pretransfer-expected.txt  sme-smj-regression-ref-expected.txt  (+19 more)
texts/: SP-02-2012_sme.txt  SP-04-2012_sme.txt  SP-05-2012_sme.txt  SP-1-2012_sme.txt  SP-10-2012_sme.txt  SP-11-2012_sme.txt  SP-12-2012_sme.txt  SP-13-2012_sme.txt  SP-14-2012_sme.txt  SP-15-2012_sme.txt  SP-16-2012_sme.txt  SP-17-2012_sme.txt  SP-18-2012_sme.txt  SP-3-2012_sme.txt  SP-5-2012_sme.txt  SP-51-2015_sme.txt  SP-52-2015_sme.txt  SP-6-2012_sme.txt  SP-7-2012_sme.txt  SP-8-2012_sme.txt  SP-9-2012_sme.txt  brosjyre_foresatte_np08_sme.txt  brosjyre_foresatte_np08_smj.txt  meahccetuvra_sme.txt  num_sentences_sme.txt  presid_sme.txt  presid_smj.txt  pron2sentences_sme.txt  pronsentences_sme.txt  ruovttubarggut_sme.txt  samastit_skuvlahist_sme.txt  samastit_skuvlahist_smj.txt  samediggeweb_sme.txt  samediggeweb_smj.txt  samediggidiedadus_samegiela_birra_2012.sme.txt  samediggidiedadus_samegiela_birra_2012.smj.txt  samibaikkit_sme.txt  story.sme.txt  tarina.smj.txt  textB_sme.txt
tmx_data/: JIGjuoiganfeber.tmx  Olli_kronikk_sme2smj.tmx  SDeisevalddit.tmx  SDguorahallet.tmx  SDluonddulihkahallamiid.tmx  SDmanaidgarddit.tmx  SDnuorradaidarat.tmx  SDoahpponeavvuide.tmx  SDprestale.tmx  SDsearvvagiellaloktemii.tmx  SDstuoraearru.tmx  SDvuordamusat.tmx  SDvuorrasat.tmx  SDvuosttas.tmx  (+10 more)
(+617 files in other folders)
